--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <meta name="description" content="prodYakkai - Event Production Team" />
+    <meta name="keywords" content="prodYakkai, event production, VTuber, DJ, live music" />
+    <meta name="author" content="prodYakkai Team" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="prodYakkai - Event Production Team">
+    <meta name="twitter:description" content="prodYakkai is an event production team specializing in VTuber, DJ, and live music events. We turn your event ideas into reality.">
+    <meta name="twitter:image" content="/assets/img/prodyakkai_full.webp">
+    <meta property="og:title" content="prodYakkai - Event Production Team">
+    <meta property="og:description" content="prodYakkai is an event production team specializing in VTuber, DJ, and live music events. We turn your event ideas into reality.">
+    <meta property="og:image" content="/assets/img/prodyakkai_full.webp">
+    <meta property="og:url" content="https://prodyakkai.com">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="prodYakkai">
+    <meta property="og:locale" content="en_US">
+    
     <title>production Yakkai - prodYakkai</title>
 
     <link rel="stylesheet" href="/assets/css/index.css" />
