Updated descriptions, some titles and wording, added email link, swapped in updated card.png image file.

--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <meta name="description" content="prodYakkai - Event Production Team" />
-    <meta name="keywords" content="prodYakkai, event production, VTuber, DJ, live music" />
+    <meta name="keywords" content="prodYakkai, Event Production, VTubers, DJs, Live Productions" />
     <meta name="author" content="prodYakkai Team" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="prodYakkai - Event Production Team">
-    <meta name="twitter:description" content="prodYakkai is an event production team specializing in VTuber, DJ, and live music events. We turn your event ideas into reality.">
+    <meta name="twitter:description" content="prodYakkai is an event production team specializing in VTubers, DJs, Live Productions. Turning dreams into realities.">
     <meta name="twitter:image" content="/assets/img/prodyakkai_full.webp">
     <meta property="og:title" content="prodYakkai - Event Production Team">
-    <meta property="og:description" content="prodYakkai is an event production team specializing in VTuber, DJ, and live music events. We turn your event ideas into reality.">
+    <meta property="og:description" content="prodYakkai is an event production team specializing in VTubers, DJs, Live Productions. Turning dreams into realities.">
     <meta property="og:image" content="/assets/img/prodyakkai_full.webp">
     <meta property="og:url" content="https://prodyakkai.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="prodYakkai">
     <meta property="og:locale" content="en_US">
     
-    <title>production Yakkai - prodYakkai</title>
+    <title>prodYakkai - production Yakkai</title>
 
     <link rel="stylesheet" href="/assets/css/index.css" />
   </head>
@@ -35,7 +35,7 @@
           srcset=""
           class="img-responsive"
         />
-        <p>If letting the intrusive thought win was a production team</p>
+        <p>If letting the intrusive thought win was a production team.</p>
       </div>
       <div class="navbar">
         <a href="/">Home</a>
@@ -50,8 +50,8 @@
         <h2>About Us</h2>
         <p>
           prodYakkai is an event production team based on the United States East
-          Coast. We specialize in VTuber, DJ and live music event productions.
-          From planning to on site operation we've got you covered. prodYakkai
+          Coast. We specialize in VTubers, DJs and live event productions.
+          From pre-planning to on site operations and support, we've got you covered. prodYakkai
           helps turn silly event ideas into reality for once in a lifetime
           experiences.
         </p>
@@ -60,25 +60,26 @@
         <h2>Our Services</h2>
         <ul>
           <li>Event Planning & Management</li>
-          <li>VTuber Event Production</li>
+          <li>VTubing Production</li>
           <li>Custom Event Solutions</li>
-          <li>Virtual Event Support</li>
+          <li>Virtual Production Support</li>
           <li>Technical Support and Equipment Rental</li>
-          <li>Post-Event Analysis and Feedback</li>
+          <li>Post-Show Analysis and Feedback</li>
         </ul>
       </section>
       <section id="works">
         <h2>Our Works</h2>
         <p>
-          We have worked with various VTubers and artists to create memorable
-          events. Check out our portfolio to see some of our past projects.
+          We have worked with various VTubers, agencies, groups and artists to create a large assortment of memorable
+          experiences. Check out our portfolio to see some of our past projects!
         </p>
       </section>
       <section id="contact">
         <h2>Contact</h2>
         <p>
           Follow us on SNS for updates and announcements:
-          <a href="https://x.com/prodyakkai">X.com</a> |
+          <a href="mailto:contact@prodyakkai.com?cc=mcguire@prodyakkai.com&subject=General%20Inquiry">Email</a>
+          <a href="https://x.com/prodyakkai">x.com</a> |
           <a href="https://twitch.tv/prodyakkai">twitch.tv</a>
         </p>
       </section>
