Fixed error with mailto address link

--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
         <h2>Contact</h2>
         <p>
           Follow us on SNS for updates and announcements:
-          <a href="mailto:contact@prodyakkai.com?cc=mcguire@prodyakkai.com&subject=General%20Inquiry">Email</a>
-          <a href="mailto:contact@prodyakkai.com?cc=mcguire@prodyakkai.com&subject=General%20Inquiry">Email</a> |
+          <a href="mailto:contact@prodyakkai.com">Email</a> |
           <a href="https://x.com/prodyakkai">x.com</a> |
           <a href="https://twitch.tv/prodyakkai">twitch.tv</a>
         </p>
