change theme color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="prodYakkai - Event Production Team" />
     <meta name="keywords" content="prodYakkai, Event Production, VTubers, DJs, Live Productions" />
     <meta name="author" content="prodYakkai Team" />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#fcba33" />
     <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
 
     <meta name="twitter:card" content="summary_large_image">
